Fixed justify-content stretch bug on new chrome?

--- a/source/main.scss
+++ b/source/main.scss
@@ -109,7 +109,7 @@ ol {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: stretch;
+    justify-content: start;
     align-items: stretch;
     align-content: stretch;
     gap: var(--space-small);
